Fixing bugs with merged things
This reverts commit ec12ff4a83523aa1b0bd18f97ac524e69b9148ff.

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -61,7 +61,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1928,Y=-8)
+NewWindowPosition=(X=0,Y=12)
 PIEAlwaysOnTop=True
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -91,7 +91,7 @@ AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=1914,Y=1040)
-LastSize=(X=1920,Y=1006)
+LastSize=(X=1914,Y=1016)
 None=======
 None=======
 LastExecutedLaunchDevice=Windows@DESKTOP-K0L41OF
@@ -99,10 +99,10 @@ LastExecutedLaunchName=DESKTOP-K0L41OF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1920
+NewWindowWidth=1914
 NewWindowHeight=1040
-NewWindowHeight=1006
-MultipleInstancePositions=(X=-1928,Y=-8)
+NewWindowHeight=1016
+MultipleInstancePositions=(X=0,Y=12)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 
@@ -110,10 +110,8 @@ LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt
-OpenAssetsAtExit=/Game/ConveyorBelt/W_ConveyorBelt.W_ConveyorBelt
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2248,7 +2246,7 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -2270,7 +2268,7 @@ ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Keypad_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
-UserWidget=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_ThirdPersonCharacter_C=
@@ -2329,7 +2327,7 @@ InventoryClick=
 InventoryClick_8=
 InputAction="\"Object.Action.Triggers\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
-W_ConveyorBelt_C=
+W_ConveyorBelt_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset=
 OpenDoor=
@@ -2375,8 +2373,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ThirdPerson/Maps/ThirdPersonMap1.ThirdPersonMap1", ()))
 
 [RootWindow]
-ScreenPosition=X=41.000 Y=16.000
-WindowSize=X=1322.000 Y=762.000
+ScreenPosition=X=40.800 Y=16.000
+WindowSize=X=1323.200 Y=763.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3428,9 +3426,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Games/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=G:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3635,9 +3633,9 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem1=/Game/ThirdPerson/Sounds/IF_Sound
-MRUItem2=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem0=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem1=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem2=/Game/ThirdPerson/Sounds/IF_Sound
 MRUItem3=/Game/ThirdPerson/Sounds/BP_SoundManager
 MRUItem4=/Game/ThirdPerson/Menus/Images/Tick
 MRUItem5=/Game/ThirdPerson/Menus/W_Menu
