Conveyor start fix
input disabled when playing audio at the start of the conveyor task to prevent audio spam.

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,6 +111,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
+OpenAssetsAtExit=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2358,7 +2359,7 @@ S_CutsceneTrigger="\"Struct.GiveItem_16_5873A4FA41B6B0079B57338B44FDD3A5\" "
 HighestPriority=
 HighestPriority_13=
 BP_Box_C=
-Actor="\"Object.Tags\" "
+Actor=
 UserConstructionScript="\"Struct\" "
 UserConstructionScript_3="\"Struct\" "
 StopConvey=
@@ -3435,9 +3436,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=G:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Games/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=G:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3517,7 +3518,7 @@ BP_SoundManager_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variabl
 BillboardComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 AmbientSound=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 TextRenderActor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
-Actor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
+Actor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,PropertyWrapper.DefaultValueCategory.CorrectKeithList,PropertyWrapper.DefaultValueCategory.ScanLinesList,PropertyWrapper.DefaultValueCategory.CorrectLinesList,PropertyWrapper.DefaultValueCategory.WrongLinesList,K2Node_VariableGet.DefaultValueCategory.CorrectLinesList,PropertyWrapper.DefaultValueCategory.ObjectiveTexts,
 VolumetricCloud=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 ExponentialHeightFog=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 EdGraph=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
@@ -3644,15 +3645,15 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/Tutorials/W_TutorialUI
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem4=/Game/ThirdPerson/Sounds/BP_SoundManager
-MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem6=/Game/ThirdPerson/Widgets/Credits/W_Credits
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem1=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
+MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/Tutorials/W_TutorialUI
+MRUItem5=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem7=/Game/ThirdPerson/Widgets/Credits/W_Credits
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem9=/Game/ConveyorBelt/W_ConveyorBelt
 MRUItem10=/Game/ThirdPerson/Sounds/IF_Sound
 MRUItem11=/Game/ThirdPerson/Menus/Images/Tick
@@ -3803,7 +3804,7 @@ BP_Box_C.Actor=True
 /Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap=1
 /Game/ThirdPerson/Keypad/DigitMaterials/RT_1.RT_1=1
 /Game/ThirdPerson/Keypad/DigitMaterials/M_1.M_1=1
-/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager=1
+/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager=0
 /Game/ThirdPerson/Keypad/W_Keypad.W_Keypad=1
 /Game/ThirdPerson/Interfaces/IF_Inventory.IF_Inventory=1
 /Game/ThirdPerson/Inventory/W_Menu.W_Menu=1
@@ -3865,7 +3866,7 @@ BP_Box_C.Actor=True
 /Game/Characters/Keith/Character_Mesh.Character_Mesh=1
 /Game/ThirdPerson/Blueprints/Interactives/S_Dialogue.S_Dialogue=1
 /Game/ConveyorBelt/IF_Conveyor.IF_Conveyor=1
-/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt=1
+/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt=0
 /Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/ThirdPerson/Inventory/W_MMenu.W_MMenu=1
